<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HighScoreActivity"
    android:background="@color/gameBackgroundColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/high_scores_button"
        android:id="@+id/highScoresTitleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/activity_title_font_size"
        android:textColor="@color/whiteColor"
        android:textStyle="bold" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/highScoresListView"
        android:layout_below="@+id/highScoresTitleTextView"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/smartChimpLogo3"
        android:divider="@android:color/transparent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smartChimpLogo3"
        android:src="@drawable/smart_chimp_logo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/smart_chimp_logo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:id="@+id/resetScoresButton"
        android:background="@android:color/transparent"
        android:layout_alignBottom="@+id/smartChimpLogo3"
        android:layout_alignRight="@+id/highScoresListView"
        android:layout_alignEnd="@+id/highScoresListView"
        android:textColor="@color/quitBackColor"
        android:textStyle="bold"
        android:textSize="@dimen/reset_back_font_size" />
</RelativeLayout>
