<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gameBackgroundColor"
    android:screenOrientation="portrait"
    tools:context=".GameActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/blackColor"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <TextView
            android:id="@+id/correctTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/correct_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/game_bar_font_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"
            android:layout_toLeftOf="@+id/scoreTextView"
            android:layout_toStartOf="@+id/scoreTextView"
            android:contentDescription="@string/small_banana"
            android:src="@drawable/banana_small" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/score_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/game_bar_font_size"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/questionScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout2"
        android:fillViewport="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/question_font_size"
            android:gravity="center"
            android:background="@color/questionBackgroundColor"
            android:padding="20dp" />
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:id="@+id/linearLayout2">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerButton1"
            android:background="@drawable/answer_button"
            android:textSize="@dimen/answer_font_size"
            android:textColor="@color/blackColor"
            android:gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerButton2"
            android:background="@drawable/answer_button"
            android:textSize="@dimen/answer_font_size"
            android:textColor="@color/blackColor"
            android:gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerButton3"
            android:background="@drawable/answer_button"
            android:textSize="@dimen/answer_font_size"
            android:textColor="@color/blackColor"
            android:gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerButton4"
            android:background="@drawable/answer_button"
            android:textSize="@dimen/answer_font_size"
            android:textColor="@color/blackColor"
            android:gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginBottom="5dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="63dp"
            android:layout_height="37dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/smart_chimp_logo"
            android:src="@drawable/smart_chimp_logo" />
    </RelativeLayout>

</RelativeLayout>
